[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "streamlit-vertical-slider>=2.5.5",
    "streamlit==1.35.0",
    "numerize>=0.12",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "streamlit-toggle>=0.1.3",
    "statsmodels>=0.14.4",
    "st-pages==0.4.5",
    "scikit-learn>=1.6.1",
    "plotly>=6.0.1",
    "regex>=2024.11.6",
]
